--- a/tcn/ui/templates/rest_framework/api.html
+++ b/tcn/ui/templates/rest_framework/api.html
@@ -1,4 +1,4 @@
-{% extends 'rest_framework/base.html' %}{% load i18n static tcn %}
+{% extends 'rest_framework/base.html' %}{% load i18n %}
 
 <!---->
 {% block title %}{% trans 'The Certain News' %} | API | {{ name }}{% endblock %}
