--- a/tcn/ui/templates/ui/authors/id.html
+++ b/tcn/ui/templates/ui/authors/id.html
@@ -1,39 +1,118 @@
-{% extends 'ui/base.html' %}{% load i18n tcn %}
+{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags %}
 
 <!---->
-{% block title %}{{ block.super }} | {% trans 'Authors' %} | {{ user.get_full_name }}{% endblock %}
+{% block title %} {{ block.super }} | {% trans 'Authors' %} | {{ user.get_full_name }}{% endblock %}
 
 <!---->
 {% block content %}
 <div class="container grid gap-12 mx-auto px-4 py-20">
+  <nav class="breadcrumbs text-primary text-xs lg:text-sm">
+    <ol>
+      <li>
+        <a href="{% pageurl home %}">{% trans 'Home' %}</a>
+      </li>
+      <li>
+        <a href="{% url 'ui:authors' %}">{% trans 'Authors' %}</a>
+      </li>
+      <li>{{ user.get_full_name }}</li>
+    </ol>
+  </nav>
+
   <section class="grid gap-8">
     <section class="flex flex-col items-center justify-center gap-4">
-      {% if user.photo %}
-      <div class="avatar">
-        <div class="mask mask-squircle size-32 lg:size-56">
-          <img src="{{ user.photo.url }}" alt="{{ user }}" />
+      <figure>
+        {% if user.photo %}
+        <div class="avatar">
+          <div class="mask mask-squircle size-32 lg:size-56">
+            <img src="{{ user.photo.url }}" alt="{{ user }}" />
+          </div>
         </div>
-      </div>
-      {% else %}
-      <div class="avatar avatar-placeholder">
-        <div
-          class="mask mask-squircle flex items-center justify-center bg-primary text-primary-content size-32 lg:size-56"
-        >
-          <span class="text-5xl uppercase font-bold lg:text-7xl">
-            {{ user.first_name|slice:':1' }}
-          </span>
+        {% else %}
+        <div class="avatar avatar-placeholder">
+          <div
+            class="mask mask-squircle flex items-center justify-center bg-primary text-primary-content size-32 lg:size-56"
+          >
+            <span class="text-5xl uppercase font-bold lg:text-7xl">
+              {{ user.first_name|slice:':1' }}
+            </span>
+          </div>
         </div>
-      </div>
-      {% endif %}
+        {% endif %}
+      </figure>
+
       <h1 class="font-bold text-primary text-xl md:text-3xl lg:text-4xl">
         {{ user.get_full_name }}
       </h1>
-      <h2>{{ user.bio }}</h2>
+      <p>{{ user.bio }}</p>
+
+      <div class="flex items-center gap-4">
+        <div class="tooltip tooltip-success" data-tip="{% trans 'Articles' %}">
+          <span class="btn btn-soft btn-sm btn-success md:btn-md 2xl:btn-lg">
+            <i data-lucide="notebook-pen" class="size-4 lg:size-6"></i>
+            {{ user.article_count }}
+          </span>
+        </div>
+
+        <div class="tooltip tooltip-info" data-tip="{% trans 'Date joined' %}">
+          <time
+            datetime="{{ user.date_joined }}"
+            class="badge badge-soft badge-sm badge-info md:badge-md xl:badge-lg 2xl:badge-xl"
+          >
+            <i data-lucide="calendar-clock" class="size-4 lg:size-6"></i>
+            {{ user.date_joined|date }}
+          </time>
+        </div>
+
+        {% if request.user.is_authenticated %}
+        <!---->
+        {% if user in request.user.following.all %}
+        <div
+          class="tooltip tooltip-primary"
+          data-tip="{% translate 'Following' %}"
+        >
+          <button
+            onclick="follow('{{ user.slug }}')"
+            class="btn btn-sm btn-primary md:btn-md 2xl:btn-lg"
+          >
+            <i data-lucide="user-check" class="size-4 lg:size-6"></i>
+            <span>{% translate 'Following' %}</span>
+          </button>
+        </div>
+        {% else %}
+        <div
+          class="tooltip tooltip-primary"
+          data-tip="{% translate 'Follow' %}"
+        >
+          <button
+            onclick="follow('{{ user.slug }}')"
+            class="btn btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
+          >
+            <i data-lucide="user-plus" class="size-4 lg:size-6"></i>
+            <span>{% translate 'Follow' %}</span>
+          </button>
+        </div>
+        {% endif %}
+        <!---->
+        {% else %}
+        <div
+          class="tooltip tooltip-primary"
+          data-tip="{% translate 'Login to follow' %}"
+        >
+          <a
+            href="{% url 'ui:login' %}?next={% url 'ui:author' user.slug %}"
+            class="btn btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
+          >
+            <i data-lucide="user-plus" class="size-4 lg:size-6"></i>
+            <span>{% translate 'Follow' %}</span>
+          </a>
+        </div>
+        {% endif %}
+      </div>
     </section>
 
-    <h3 class="font-bold text-primary text-xl md:text-2xl lg:text-3xl">
+    <h2 class="font-bold text-primary text-xl md:text-2xl lg:text-3xl">
       {% trans 'Articles' %}
-    </h3>
+    </h2>
 
     <ol class="grid gap-4 grid-cols-12">
       {% for article in articles %}
@@ -57,5 +136,55 @@
 
     {% include 'ui/components/pagination.html' %}
   </section>
+</div>
+
+<div>
+  {% csrf_token %}
+  <div
+    id="notifications"
+    class="hidden toast toast-top toast-end top-24 right-4 lg:right-24 z-50"
+  >
+    <div class="alert alert-horizontal alert-success">
+      <i data-lucide="circle-check" class="size-4 lg:size-6"></i>
+      <p id="message"></p>
+    </div>
+  </div>
+  {% if request.user.is_authenticated %}
+  <script>
+    const token = document.querySelector("[name=csrfmiddlewaretoken]").value;
+    const message = document.getElementById("message");
+    const notifications = document.getElementById("notifications");
+
+    const follow = (user) =>
+      fetch(`/{{ LANGUAGE_CODE }}/api/users/${user}/follow/`, {
+        method: "POST",
+        headers: {
+          Accept: "application/json",
+          "Content-Type": "application/json",
+          "X-CSRFToken": token,
+        },
+        body: JSON.stringify({}),
+      })
+        .then((response) => response.json())
+        .then((data) => {
+          message.innerText = data.detail;
+          notifications.classList.toggle("hidden");
+
+          setTimeout(() => {
+            notifications.classList.toggle("hidden");
+            message.innerText = "";
+          }, 2000);
+        })
+        .catch((err) => {
+          message.innerText = err.message;
+          notifications.classList.toggle("hidden");
+
+          setTimeout(() => {
+            notifications.classList.toggle("hidden");
+            message.innerText = "";
+          }, 2000);
+        });
+  </script>
+  {% endif %}
 </div>
 {% endblock %}
