--- a/tcn/ui/templates/registration/form.html
+++ b/tcn/ui/templates/registration/form.html
@@ -5,6 +5,6 @@
 <div class="grid gap-4">
   {% block form_content %}{% endblock %}
   <!---->
-  {% include 'ui/components/form.html' %}
+  {% include 'tcn/components/form.html' %}
 </div>
 {% endblock %}
