--- a/tcn/ui/templates/registration/password_change_form.html
+++ b/tcn/ui/templates/registration/password_change_form.html
@@ -11,10 +11,8 @@
 
 <!---->
 {% block main_content %}
-<section class="grid gap-6">
-  <h1 class="text-primary text-xl font-semibold lg:text-4xl">
-    {% trans 'Change password' %}
-  </h1>
+<section class="container-prose">
+  <h1>{% trans 'Change password' %}</h1>
 
   <p>
     {% blocktrans trimmed %}Please enter your old password, for security's sake,
@@ -22,6 +20,6 @@
     correctly.{% endblocktrans %}
   </p>
 
-  {% include 'ui/components/form.html' %}
+  {% include 'tcn/components/form.html' %}
 </section>
 {% endblock %}
