--- a/tcn/ui/templates/registration/password_reset_confirm.html
+++ b/tcn/ui/templates/registration/password_reset_confirm.html
@@ -1,11 +1,11 @@
-{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags %}
+{% extends 'tcn/base.html' %}{% load i18n wagtailcore_tags %}
 
 <!---->
 {% block title %}{% trans 'Password Reset Confirm' %}{% endblock %}
 
 <!---->
-{% block content %}
-<div class="flex px-4 pb-20 pt-28 items-center justify-center">
+{% block container %}
+<div class="container mx-auto px-4 py-24 flex items-center justify-center">
   <section
     class="card card-sm w-full max-w-lg bg-base-200 shadow-xs md:card-md xl:card-lg 2xl:card-xl 2xl:max-w-xl"
   >
@@ -34,25 +34,25 @@
     </div>
 
     <main class="card-body gap-6">
-      <h2 class="card-title text-primary">
-        {% trans 'Password Reset Confirm' %}
-      </h2>
+      <div class="container-prose">
+        <h2>{% trans 'Password Reset Confirm' %}</h2>
 
-      {% if validlink %}
-      <p>
-        {% blocktrans trimmed %}Please enter your new password twice so we can
-        verify you typed it in correctly.{% endblocktrans %}
-      </p>
-      {% include 'ui/components/form.html' %}
-      <!---->
-      {% else %}
-      <p>
-        {% blocktrans trimmed %}The password reset link was invalid, possibly
-        because it has already been used. Please request a new password reset.
-        <!---->
-        {% endblocktrans %}
-      </p>
-      {% endif %}
+        {% if validlink %}
+        <p>
+          {% blocktrans trimmed %}Please enter your new password twice so we can
+          verify you typed it in correctly.{% endblocktrans %}
+        </p>
+
+        <div class="not-prose">{% include 'tcn/components/form.html' %}</div>
+        {% else %}
+        <p>
+          {% blocktrans trimmed %}The password reset link was invalid, possibly
+          because it has already been used. Please request a new password reset.
+          <!---->
+          {% endblocktrans %}
+        </p>
+        {% endif %}
+      </div>
     </main>
   </section>
 </div>
