--- a/tcn/ui/templates/registration/password_reset_done.html
+++ b/tcn/ui/templates/registration/password_reset_done.html
@@ -4,8 +4,8 @@
 {% block title %}{% trans 'Password Reset Done' %}{% endblock %}
 
 <!---->
-{% block content %}
-<div class="flex px-4 pb-20 pt-28 items-center justify-center">
+{% block container %}
+<div class="container mx-auto px-4 py-24 flex items-center justify-center">
   <section
     class="card card-sm w-full max-w-lg bg-base-200 shadow-xs md:card-md xl:card-lg 2xl:card-xl 2xl:max-w-xl"
   >
@@ -34,20 +34,26 @@
     </div>
 
     <main class="card-body gap-6">
-      <h2 class="card-title text-primary">{% trans 'Password Reset Done' %}</h2>
+      <div class="container-prose">
+        <h2>{% trans 'Password Reset Done' %}</h2>
 
-      <p>
-        {% blocktrans trimmed %}We've emailed you instructions for setting your
-        password, if an account exists with the email you entered. You should
-        receive them shortly.{% endblocktrans %}
-      </p>
-      <p>
-        {% blocktrans trimmed %}If you don't receive an email, please make sure
-        you've entered the address you registered with, and check your spam
-        folder.{% endblocktrans %}
-      </p>
+        <p>
+          {% blocktrans trimmed %}We've emailed you instructions for setting
+          your password, if an account exists with the email you entered. You
+          should receive them shortly.{% endblocktrans %}
+        </p>
+        <p>
+          {% blocktrans trimmed %}If you don't receive an email, please make
+          sure you've entered the address you registered with, and check your
+          spam folder.{% endblocktrans %}
+        </p>
+      </div>
 
-      <a href="{% url 'ui:login' %}" class="btn btn-sm btn-primary lg:btn-lg">
+      <a
+        href="{% url 'tcn:login' %}"
+        class="btn btn-sm btn-soft btn-success lg:btn-md 2xl:btn-lg"
+      >
+        <i data-lucide="log-in" class="size-4 lg:size-6"></i>
         {% trans 'Log in' %}
       </a>
     </main>
