--- a/tcn/ui/templates/registration/delete.html
+++ b/tcn/ui/templates/registration/delete.html
@@ -10,16 +10,14 @@
 
 <!---->
 {% block form_content %}
-<h1 class="text-primary text-xl font-semibold lg:text-4xl">
-  {% trans 'Delete account' %}
-</h1>
+<div class="container-prose">
+  <h1>{% trans 'Delete account' %}</h1>
 
-<p class="lg:text-xl">
-  {% trans 'Are your sure that you want to delete your account?' %}
-</p>
+  <p>{% trans 'Are your sure that you want to delete your account?' %}</p>
 
-<div class="alert alert-error">
-  <i data-lucide="circle-x" class="size-4 lg:size-6"></i>
-  <p>{% trans 'This action is destructive!' %}</p>
+  <div class="alert alert-error">
+    <i data-lucide="circle-x" class="size-4 lg:size-6"></i>
+    <p>{% trans 'This action is destructive!' %}</p>
+  </div>
 </div>
 {% endblock %}
