--- a/tcn/ui/templates/registration/edit.html
+++ b/tcn/ui/templates/registration/edit.html
@@ -5,7 +5,7 @@
 
 <!---->
 {% block form_content %}
-<h1 class="text-primary text-xl font-semibold lg:text-4xl">
-  {% trans 'Edit account' %}
-</h1>
+<div class="container-prose">
+  <h1>{% trans 'Edit account' %}</h1>
+</div>
 {% endblock %}
