--- a/tcn/ui/templates/registration/logged_out.html
+++ b/tcn/ui/templates/registration/logged_out.html
@@ -4,8 +4,8 @@
 {% block title %}{{ block.super }} | {% trans 'Logged out' %}{% endblock %}
 
 <!---->
-{% block content %}
-<div class="flex px-4 pb-20 pt-28 items-center justify-center">
+{% block container %}
+<div class="container mx-auto px-4 py-24 flex items-center justify-center">
   <section
     class="card card-sm w-full max-w-lg bg-base-200 shadow-xs md:card-md xl:card-lg 2xl:card-xl 2xl:max-w-xl"
   >
@@ -34,15 +34,27 @@
     </div>
 
     <main class="card-body gap-6">
-      <h2 class="card-title text-primary">{%trans 'Logged Out' %}</h2>
+      <div class="container-prose">
+        <h2>{%trans 'Logged Out' %}</h2>
 
-      <p>{% trans 'Thanks for spending some quality time with us today.' %}</p>
+        <p>
+          {% trans 'Thanks for spending some quality time with us today.' %}
+        </p>
+      </div>
 
-      <div class="grid grid-cols-2 gap-4">
-        <a href="{% url 'ui:login' %}" class="btn btn-soft btn-primary">
+      <div class="grid grid-cols-1 gap-4 md:grid-cols-2">
+        <a
+          href="{% url 'tcn:login' %}"
+          class="btn btn-sm btn-primary lg:btn-md 2xl:btn-lg"
+        >
+          <i data-lucide="log-in" class="size-4 lg:size-6"></i>
           {% trans 'Log in' %}
         </a>
-        <a href="{% url 'ui:subscribe' %}" class="btn btn-soft btn-primary">
+        <a
+          href="{% url 'tcn:subscribe' %}"
+          class="btn btn-sm btn-soft btn-success lg:btn-md 2xl:btn-lg"
+        >
+          <i data-lucide="user" class="size-4 lg:size-6"></i>
           {% trans 'Subscribe' %}
         </a>
       </div>
