--- a/tcn/ui/templates/registration/login.html
+++ b/tcn/ui/templates/registration/login.html
@@ -1,11 +1,11 @@
-{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags %}
+{% extends 'tcn/base.html' %}{% load i18n wagtailcore_tags %}
 
 <!---->
 {% block title %}{{ block.super }} | {% trans 'Log in' %}{% endblock %}
 
 <!---->
-{% block content %}
-<div class="flex px-4 pb-20 pt-28 items-center justify-center">
+{% block container %}
+<div class="container mx-auto px-4 py-24 flex items-center justify-center">
   <section
     class="card card-sm w-full max-w-lg bg-base-200 shadow-xs md:card-md xl:card-lg 2xl:card-xl 2xl:max-w-xl"
   >
@@ -34,9 +34,11 @@
     </div>
 
     <main class="card-body gap-6">
-      <h2 class="card-title text-primary">{% trans 'Log in' %}</h2>
+      <div class="container-prose">
+        <h2>{% trans 'Log in' %}</h2>
 
-      <p>{% trans 'Welcome, please login to continue.' %}</p>
+        <p>{% trans 'Welcome, please login to continue.' %}</p>
+      </div>
 
       <!---->
       {% if next %}
@@ -58,16 +60,21 @@
       {% endif %}
 
       <!---->
-      {% include 'ui/components/form.html' %}
+      {% include 'tcn/components/form.html' %}
 
-      <div class="grid gap-4 grid-cols-2">
-        <a href="{% url 'ui:subscribe' %}" class="btn btn-soft btn-primary">
+      <div class="grid grid-cols-1 gap-4 md:grid-cols-2">
+        <a
+          href="{% url 'tcn:subscribe' %}"
+          class="btn btn-sm btn-soft btn-success lg:btn-md 2xl:btn-lg"
+        >
+          <i data-lucide="heart-handshake" class="size-4 lg:size-6"></i>
           {% trans 'Subscribe' %}
         </a>
         <a
-          href="{% url 'ui:password_reset' %}"
-          class="btn btn-soft btn-primary"
+          href="{% url 'tcn:password_reset' %}"
+          class="btn btn-sm btn-soft btn-primary lg:btn-md 2xl:btn-lg"
         >
+          <i data-lucide="key" class="size-4 lg:size-6"></i>
           {% trans 'Forgot password?' %}
         </a>
       </div>
