--- a/tcn/ui/templates/registration/password_reset_complete.html
+++ b/tcn/ui/templates/registration/password_reset_complete.html
@@ -1,11 +1,11 @@
-{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags %}
+{% extends 'tcn/base.html' %}{% load i18n wagtailcore_tags %}
 
 <!---->
 {% block title %}{{ block.super }} | {% trans 'Password Reset' %}{% endblock %}
 
 <!---->
-{% block content %}
-<div class="flex px-4 pb-20 pt-28 items-center justify-center">
+{% block container %}
+<div class="container mx-auto px-4 py-24 flex items-center justify-center">
   <section
     class="card card-sm w-full max-w-lg bg-base-200 shadow-xs md:card-md xl:card-lg 2xl:card-xl 2xl:max-w-xl"
   >
@@ -34,16 +34,20 @@
     </div>
 
     <main class="card-body gap-6">
-      <h2 class="card-title text-primary">
-        {% trans 'Password Reset Confirm' %}
-      </h2>
+      <div class="container-prose">
+        <h2>{% trans 'Password Reset Confirm' %}</h2>
 
-      <p>
-        {% blocktrans trimmed %}Your password has been set. You may go ahead and
-        log in now.{% endblocktrans %}
-      </p>
+        <p>
+          {% blocktrans trimmed %}Your password has been set. You may go ahead
+          and log in now.{% endblocktrans %}
+        </p>
+      </div>
 
-      <a href="{% url 'ui:login' %}" class="btn btn-sm btn-primary lg:btn-lg">
+      <a
+        href="{% url 'tcn:login' %}"
+        class="btn btn-sm btn-soft btn-success lg:btn-md 2xl:btn-lg"
+      >
+        <i data-lucide="log-in" class="size-4 lg:size-6"></i>
         {% trans 'Log in' %}
       </a>
     </main>
