--- a/tcn/ui/templates/registration/password_reset_email.html
+++ b/tcn/ui/templates/registration/password_reset_email.html
@@ -10,10 +10,10 @@ password reset for your user account at {{ site_name }}.{% endblocktrans %}
 {% trans 'Please go to the following page and choose a new password:' %}
 
 <!---->
-{% block reset_link %}{{ protocol }}://{{ domain }}{% url 'ui:password_reset_confirm' uidb64=uid token=token %}{% endblock %}
+{% block reset_link %}{{ protocol }}://{{ domain }}{% url 'tcn:password_reset_confirm' uidb64=uid token=token %}{% endblock %}
 
 <!---->
-{% trans 'Your username, in case you've forgotten:' %} {{ user.get_username }}
+{% trans 'Your username, in case you have forgotten:' %} {{ user.get_username }}
 <!---->
 {% trans 'Thanks for using our site!' %}
 <!---->
