--- a/tcn/ui/templates/registration/password_reset_form.html
+++ b/tcn/ui/templates/registration/password_reset_form.html
@@ -1,11 +1,11 @@
-{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags %}
+{% extends 'tcn/base.html' %}{% load i18n wagtailcore_tags %}
 
 <!---->
 {% block title %}{{ block.super }} | {% trans 'Reset password' %}{% endblock %}
 
 <!---->
 {% block content %}
-<div class="flex px-4 pb-20 pt-28 items-center justify-center">
+<div class="container mx-auto px-4 py-24 flex items-center justify-center">
   <section
     class="card card-sm w-full max-w-lg bg-base-200 shadow-xs md:card-md xl:card-lg 2xl:card-xl 2xl:max-w-xl"
   >
@@ -34,17 +34,19 @@
     </div>
 
     <main class="card-body gap-6">
-      <h2 class="card-title text-primary">{% trans 'Reset password' %}</h2>
+      <div class="container-prose">
+        <h2>{% trans 'Reset password' %}</h2>
 
-      <p>
-        {% blocktrans trimmed %}Forgotten your password? Enter your email
-        address below, and we'll email instructions for setting a new one.
-        <!---->
-        {% endblocktrans %}
-      </p>
+        <p>
+          {% blocktrans trimmed %}Forgotten your password? Enter your email
+          address below, and we'll email instructions for setting a new one.
+          <!---->
+          {% endblocktrans %}
+        </p>
+      </div>
 
       <!---->
-      {% include 'ui/components/form.html' %}
+      {% include 'tcn/components/form.html' %}
     </main>
   </section>
 </div>
