--- a/tcn/ui/templates/registration/profile.html
+++ b/tcn/ui/templates/registration/profile.html
@@ -27,10 +27,10 @@
     </div>
 
     <div class="card-body gap-4 lg:gap-6">
-      <h1 class="card-title text-center text-primary">
-        {{ request.user.get_full_name }}
-      </h1>
-      <p>{% trans 'Welcome to your Profile' %}</p>
+      <div class="container-prose">
+        <h1>{{ request.user.get_full_name }}</h1>
+        <p>{% trans 'Welcome to your Profile' %}</p>
+      </div>
     </div>
   </div>
 </section>
