feat: Update Arabic and Turkish translations and improve signup and password reset templates

--- a/tcn/ui/templates/registration/password_reset_form.html
+++ b/tcn/ui/templates/registration/password_reset_form.html
@@ -4,7 +4,7 @@
 {% block title %}{{ block.super }} | {% trans 'Reset password' %}{% endblock %}
 
 <!---->
-{% block content %}
+{% block container %}
 <div class="container mx-auto px-4 py-24 flex items-center justify-center">
   <section
     class="card card-sm w-full max-w-lg bg-base-200 shadow-xs md:card-md xl:card-lg 2xl:card-xl 2xl:max-w-xl"
